Enable travis.yml, Add note to the lob/README.md, add Wire as a dep into the platformio.ini

--- a/lib/README
+++ b/lib/README
@@ -1,3 +1,4 @@
+Use https://github.com/arduino-libraries/Servo/blob/master/src/Servo.h as an example for the PlayerPad class
 
 This directory is intended for project specific (private) libraries.
 PlatformIO will compile them to static libraries and link into executable file.
